--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -103,6 +103,59 @@
 					</div>
 					<div class="clearer"></div>
 				</div>
+				<div class="section_header_sm">
+					<span>Latest Activity</span>
+				</div>
+				<div class="section_sm" id="activity_stream">
+						<div class="activity_entry">
+							<img src="resources/images/Blog_Icon.gif" width="28" height="28" alt="Blog">
+							<div class="desc">
+								<a href="#">Ojas Srivastava</a> posted a new blog entry titled <a href="#">Manali Trip</a>
+								<div class="datetime">5 min ago</div>
+							</div>
+						</div>
+						<div class="activity_entry">
+							<img src="resources/images/badge-icon.png" width="28" height="28" alt="Badge">
+							<div class="desc">
+								<a href="student_profile.html">Vidyasagar N</a> was awarded the <a href="#">Best Attendance Badge</a>
+								<div class="datetime">2 hours ago</div>
+							</div>
+						</div>
+						<div class="activity_entry">
+							<img src="resources/images/comment-icon.png" width="28" height="28" alt="Comment">
+							<div class="desc">
+								<a href="#">Abhinav Nigam</a> commented on <a href="#">CCA Activities</a>
+								<div class="datetime">4 hours ago</div>
+							</div>
+						</div>
+						<div class="activity_entry">
+							<img src="resources/images/comment-icon.png" width="28" height="28" alt="Comment">
+							<div class="desc">
+								<a href="#">Farhan S</a> commented on <a href="#">CCA Activities</a>
+								<div class="datetime">5 hours ago</div>
+							</div>
+						</div>
+						<div class="activity_entry">
+							<img src="resources/images/forum_icon.jpg" width="28" height="28" alt="Forum">
+							<div class="desc">
+								<a href="#">Sanjeev Dangi</a> made a new forum topic titled <a href="#">CCA Activities</a>
+								<div class="datetime">7 hours ago</div>
+							</div>
+						</div>
+						<div class="activity_entry">
+							<img src="resources/images/group-icon.png" width="28" height="28" alt="Group">
+							<div class="desc">
+								<a href="#">Sudhir Naik</a> joined <a href="#">Annual Function Volunteers</a> group
+								<div class="datetime">8 hours ago</div>
+							</div>
+						</div>
+ 						<div id="footer">
+							<a href="student_profile.html">View all Activity</a>
+							<div class="clearer"></div>
+						</div>
+					</div>
+					<div class="clearer"></div>
+				</div>
 			</div>
 		</div>
 	</div>
