--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -207,6 +207,48 @@
 							<div class="clearer"></div>
 						</div>
 					</div>
+					<div id="col_narrow">
+						<div class="section_header_sm top">
+							<span>Badges</span>
+						</div>
+						<div class="section_sm">
+							<a href="#" class="list"><img src="resources/images/badge1.jpg" width="38" height="38" alt="Head Boy">Head Boy</a>
+							<div class="clearer"></div>
+							<a href="#" class="list"><img src="resources/images/badge2.jpg" width="38" height="38" alt="Class Topper">Class Topper</a>
+							<div class="clearer"></div>
+							<a href="#" class="list"><img src="resources/images/badge3.jpg" width="38" height="38" alt="Football Player">Football Player</a>
+							<div class="clearer"></div>
+							<a href="#" class="list"><img src="resources/images/badge4.gif" width="38" height="38" alt="Top 3 Debator">Top 3 Debator</a>
+							<div class="clearer"></div>
+							<a href="#" class="list"><img src="resources/images/badge5.jpg" width="38" height="38" alt="Scout">Scout</a>
+							<div class="clearer"></div>							
+						</div>
+						
+						<div class="section_header_sm">
+							<span>Groups</span>
+						</div>
+						<div class="section_sm">
+							<table id="home_groups">
+								<tr>
+									<td width="80" height="80" align="center">
+										<table><tr><td><a href="#" class="list"><img src="resources/images/badge1.jpg" width="38" height="38" alt="Head Boy"></td></tr><tr><td>Physics</a></td></tr></table>
+									</td>
+									<td width="80" height="80" align="center">
+										<table><tr><td><a href="#" class="list"><img src="resources/images/badge2.jpg" width="38" height="38" alt="Head Boy"></td></tr><tr><td>NCC</a></td></tr></table>
+									</td>
+								</tr>
+								<tr>
+									<td width="80" height="80" align="center">
+										<table><tr><td><a href="#" class="list"><img src="resources/images/badge3.jpg" width="38" height="38" alt="Head Boy"></td></tr><tr><td>Football</a></td></tr></table>
+									</td>
+									<td width="80" height="80" align="center">
+										<table><tr><td><a href="#" class="list"><img src="resources/images/badge4.gif" width="38" height="38" alt="Head Boy"></td></tr><tr><td>Theatre</a></td></tr></table>
+									</td>
+								</tr>	
+							</table>
+							<div class="clearer"></div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
