--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,7 +6,20 @@
 	<link rel="stylesheet" href="resources/css/app.css" type="text/css" media="screen" charset="utf-8"/>
 	<script type="text/javascript" src="resources/js/lib/JQuery.js"></script>
 	<script type="text/javascript" src="resources/js/lib/jquery.hoverIntent.minified.js"></script>
-	<script type="text/javascript" src="resources/js/lib/highcharts.js"></script></head>
+	<script type="text/javascript" src="resources/js/lib/highcharts.js"></script>
+	<script src="resources/js/lib/JQuery.Ns.js" type="text/javascript"></script>
+	<script src="resources/js/lib/JQuery.PubSub.js" type="text/javascript"></script>
+	<script src="resources/js/lib/Jquery.Tmpl.js" type="text/javascript"></script>
+	<script src="resources/js/lib/Underscore.js" type="text/javascript"></script>
+	<script src="resources/js/lib/Backbone.js" type="text/javascript"></script>
+	
+	<script src="resources/js/config/com.skunkworks.ireportcards.Config.js" type="text/javascript"></script>
+	<script src="resources/js/utils/com.skunkworks.ireportcards.Utils.js" type="text/javascript"></script>
+	<script src="resources/js/controllers/com.skunkworks.ireportcards.controllers.HomeController.js" type="text/javascript"></script>
+	<script src="resources/js/views/com.skunkworks.ireportcards.views.StudentHome.js" type="text/javascript"></script>
+	
+	</head>
+	
 <body>
 	<div id="header_wrap">
 		<div id="header">
@@ -71,38 +84,6 @@
 	<div id="content_wrap">
 		<div id="content">
 			<div id="dashboard_sidebar">
-				<div id="student">
-					<a href="#" id="student_photo"><img src="resources/images/student.jpeg" width="78" height="78" alt="Ayush's photo"></a>
-					<div id="student_info">
-						<div id="student_name">Ayush<br />Kaushik</div>
-						11 A<br/>
-						<a href="#">view profile</a>
-						<div id="classteacher">
-							<a href="javascript:;" id="classteacher_link"><img src="resources/images/teacher1.jpg" alt="Teacher's photo" width="28" height="28" /></a>
-							<div id="label">Class Teacher</div>
-							<div id="class_teacher_tile" class="tile">
-							<div class="arrow_top_left"></div>
-							<div class="header">
-								<span class="photo"><a href="#"><img src="resources/images/teacher1.jpg" width="58" height="58" alt="Teacher's photo"></a></span>
-								<span class="name_wrap">
-									<div class="name">George<br />Mennon</div>
-									<div class="name_link"><a href="#">view profile</a></div>
-								</span>
-								<div class="clearer"></div>
-							</div>
-							<div class="info">
-								<p>Hi I’m your Class Teacher. Email or call me if you would like to chat.</p>
-								<div class="contact_methods">
-									<a href="javascript:;"><img src="resources/images/tile_email.png" alt="Send email" width="17" height="13" />Send email</a>
-									<a href="javascript:;"><img src="resources/images/tile_skype.png" alt="Send Skype message" width="17" height="15" />Send Skype message</a>
-									<div class="clearer"></div>
-								</div>
-							</div>
-						</div>
-						</div>
-					</div>
-					<div class="clearer"></div>
-				</div>
 				<div class="section_header_sm">
 					<span>Latest Activity</span>
 				</div>
@@ -256,11 +237,13 @@
 				
 	<div id="errorcontainer"></div>
 	<div id="content_wrap">	</div>
-
+	
 	<script type="text/javascript">
 		var chart,chart1,chart2,chart3,chart4;
 		$(document).ready(function() {
-			
+			console.log("starting app");
+ 			homeController = new com.skunkworks.ireportcards.controllers.HomeController();
+			Backbone.history.start(); 			
 			// Header menus
 			$('#user_menus #messages').click(function() {
 				$('.tile').fadeOut('fast');
@@ -635,6 +618,7 @@
 			
 				}]
 			});
+			
 		});
 	</script>
 
